--- a/indexproj.html
+++ b/indexproj.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WheelDrivePH - Log in/Sign Up</title>
+    <title>WheelDrivePH - Log in</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <style>
@@ -86,7 +86,7 @@ body {
                     var password = document.getElementById("password").value;
             
                     if (email === "user@gmail.com" && password === "admin123") {
-                        window.location.href = "#"
+                        window.location.href = "homepage.html"
                     } else {
                         alert("Invalid email or password. Please try again.");
                     }
