--- a/booking.html
+++ b/booking.html
@@ -5,9 +5,15 @@
   <title>Booking List</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<style>
+   body{
+    background-image: url(bg1.webp);
+   }
+</style>
 <body>
   <div class="container mt-5">
     <h2>Booking Records</h2>
+    <br><br><br>
     <table class="table table-bordered">
       <thead>
         <tr>
@@ -22,6 +28,7 @@
        
       </tbody>
     </table>
+    <button type="button" class="btn btn-warning btn-lg" onclick="history.back">Back</button>
   </div>
 
   <script>
