--- a/homepage.html
+++ b/homepage.html
@@ -10,12 +10,13 @@
     <style>
       .navbar-brand {
         margin-left: 25px;
-        color: white;
+        color: rgb(0, 0, 0);
+        font-weight: bold;
       }
 
       .sidebar {
         height: 100vh;
-        background-color: #ffc107;
+        background-color: #b0aea8;
         padding: 20px;
         color: #000;
       }
@@ -23,13 +24,13 @@
       .sidebar a {
         display: block;
         padding: 10px;
-        color: #000;
+        color: #ffffff;
         text-decoration: none;
         font-weight: bold;
       }
 
       .sidebar a:hover {
-        background-color: #e0a800;
+        background-color: #f0d20d;
         border-radius: 5px;
       }
 
@@ -60,7 +61,7 @@
         box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       }
       body{
-        background-image: image();
+        background-image: url();
       }
 
 
@@ -78,7 +79,7 @@
      
         <div class="col-md-2 sidebar">
           <a href="#">Dashboard</a>
-          <a href="#">Booking</a>
+          <a href="booking.html">Booking</a>
           <a href="#">Services</a>
           <a href="indexproj.html">Logout</a>
         </div>
