--- a/homepage.html
+++ b/homepage.html
@@ -10,13 +10,16 @@
     <style>
       .navbar-brand {
         margin-left: 25px;
-        color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
         font-weight: bold;
+      }
+      .navbar{
+        background-color: #102E50;
       }
 
       .sidebar {
         height: 100vh;
-        background-color: #b0aea8;
+        background-color: #27548A;
         padding: 20px;
         color: #000;
       }
@@ -30,7 +33,7 @@
       }
 
       .sidebar a:hover {
-        background-color: #f0d20d;
+        background-color: #9EC6F3;
         border-radius: 5px;
       }
 
@@ -63,12 +66,15 @@
       body{
         background-image: url();
       }
-
+      .btn{
+        background-color: #9EC6F3;
+      }
+     
 
     </style>
   </head>
   <body>
-    <nav class="navbar bg-warning">
+    <nav class="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">WheelDrivePH</a>
       </div>
@@ -154,7 +160,7 @@
                   <option value="Luxury">Luxury</option>
                 </select>
               </div>
-            <button type="submit" class="btn btn-warning">Book Now</button>
+            <button type="submit" class="btn bg-info">Book Now</button>
             </form>
 
             <script>
