--- a/booking.html
+++ b/booking.html
@@ -28,7 +28,7 @@
        
       </tbody>
     </table>
-    <button type="button" class="btn btn-warning btn-lg" onclick="history.back">Back</button>
+    <button type="button" class="btn btn-info btn-lg" >Back</button>
   </div>
 
   <script>
