--- a/booking.html
+++ b/booking.html
@@ -28,7 +28,7 @@
        
       </tbody>
     </table>
-    <button type="button" class="btn btn-info btn-lg" >Back</button>
+    <a href="homepage.html" class="back-button">Back to Homepage</a>
   </div>
 
   <script>
